--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <main>
       <section id="links-perfil-container">
         <div class="avatar-img">
-          <img src="./img/caio.jpeg" alt="Caio" />
+          <img src="./img/avatar-jessica.jpeg" alt="Jessica" />
         </div>
         <div class="perfil-text">
-          <h1>Caio Eduardo</h1>
-          <h4>Pernambuco, Recife</h4>
-          <p>" Desenvolvedor FullStack "</p>
+          <h1>Jessica Randall</h1>
+          <h4>London,United Kingdom</h4>
+          <p>" front-end Developer and avid reader."</p>
         </div>
         <div class="perfil-links-container">
           <ul class="links-menu">
             <li>
-              <a href="https://github.com/ca1607ads">GitHub</a>
+              <a href="">GitHub</a>
             </li>
             <li>
-              <a href="#">Youtube</a>
+              <a href="#">Frontend Mentor</a>
             </li>
             <li>
               <a href="#">Linkedin</a>
